<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="screen_name">\@ %s</string>
    <string name="sample_screen_name">screen_name</string>
    <string name="sample_tweet">This is a sample tweet. This is a sample tweet.</string>
    <string name="user_screen_name">User screen name</string>
    <string name="timestamp">timestamp</string>
    <string name="a_dot">.</string>
    <string name="user_name">user_name</string>
    <string name="verified_badge">Verified Badge</string>
    <string name="compose">Compose</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="zero">0</string>
    <string name="exit_press_back_twice_message">Press back twice twice to exit</string>
    <string name="image">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reply">Reply</string>
    <string name="cancel">Cancel</string>
    <string name="tweet_your_reply">Tweet your reply</string>
    <string name="retweet">Retweet</string>
    <string name="retweeted">%s Retweeted</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="replying_to">Replying to %s</string>
    <string name="retweet_icon">Retweet Icon</string>
    <string name="content_description">Content Description</string>

</resources>