<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/verifiedBadgeTextView"
        android:layout_width="16dp"
        android:layout_height="17dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/profilePictureImageView"
        android:visibility="visible"
        android:contentDescription="@string/verified_badge" />

    <TextView
        android:id="@+id/timestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/screenNameTextView"
        android:text="@string/timestamp"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/profilePictureImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/user_screen_name"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/screenNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/nameTextView"
        android:text="@string/sample_screen_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/verifiedBadgeTextView"
        android:text="@string/user_name"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tweetBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screenNameTextView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/profilePictureImageView"
        android:text="@string/sample_tweet"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/justASeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="-5dp"
        android:layout_toEndOf="@+id/screenNameTextView"
        android:text="@string/a_dot"
        android:textSize="14sp" />

</RelativeLayout>