<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.erastustweet.ComposeActivity">

    <EditText
        android:id="@+id/edit_text_compose_tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/what_s_happening"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:autofillHints="@string/what_s_happening" />

    <Button
        android:id="@+id/button_compose_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_compose_tweet"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:enabled="false"
        android:text="@string/tweet" />

    <TextView
        android:id="@+id/text_view_char_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_compose_tweet"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/button_compose_tweet"
        android:text="@string/zero" />
</RelativeLayout>